# test-rust-ios

cargo/: Cargo.toml
cargo/src/: glutin.rs  greetings.h  ios.rs  lib.rs
cargo/src/gdx/: mod.rs
cargo/src/gdx/g2d/: batcher.rs  mesh.rs  mod.rs  ortho_cam.rs  shader_program.rs  texture.rs
cargo/src/gdx/math/: common.rs  mat3.rs  mat4.rs  mod.rs  quaternion.rs  vector2.rs  vector3.rs
cargo/src/gdx/misc/: color.rs  frame_counter.rs  mod.rs
cargo/src/js/: rt.rs
ios/test-rust-ios/: Greetings-Bridging-Header.h
ios/test-rust-ios/test-rust-ios/: ContentView.swift  test_rust_iosApp.swift
ios/test-rust-ios/test-rust-ios.xcodeproj/: project.pbxproj
ios/test-rust-ios/test-rust-ios.xcodeproj/project.xcworkspace/xcuserdata/dev.xcuserdatad/: UserInterfaceState.xcuserstate
ios/test-rust-ios/test-rust-ios.xcodeproj/xcuserdata/dev.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/test-rust-ios/test-rust-iosTests/: test_rust_iosTests.swift
ios/test-rust-ios/test-rust-iosUITests/: test_rust_iosUITests.swift  test_rust_iosUITestsLaunchTests.swift
