[package]
name = "cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "greetings"
crate-type = ["staticlib", "cdylib"]

[dependencies]
const_format = "0.2.32"
glow = "0.13.0"
image = "0.24.7"
objc = "0.2.7"
rand = "0.8.5"
